cambio de estilos

--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,29 @@
 <body class="d-flex flex-column min-vh-100">
     <header id="jsheader"></header>
     <main class="container flex-grow-1 my-4">
-        <h1>hola desde nosotros</h1>
+
+        <section class="mb-4">
+            <h2 class="h3">Nuestra Historia</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel malesuada lacus.
+                Suspendisse potenti. Curabitur nec dapibus odio. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Iste, voluptates! Illo quae doloremque explicabo fugit accusamus sed aut, ut ad id numquam, soluta
+                unde eum? Labore et sunt sint temporibus.</p>
+        </section>
+        <section class="mb-4">
+            <h2 class="h3">Misión y Visión</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis elit et augue
+                aliquet, non venenatis urna vehicula.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatibus magni minima. Optio
+                temporibus aspernatur libero. Quaerat sequi eos animi porro pariatur dolores, atque culpa sint sapiente?
+                Itaque, totam labore!</p>
+        </section>
+        <section class="mb-4">
+            <h2 class="h3">Nuestro Equipo</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan sapien et mauris
+                suscipit, at dictum augue scelerisque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
+                repellendus commodi beatae ratione quisquam cumque qui sed praesentium corrupti fuga? Possimus accusamus
+                in optio autem odit ab, exercitationem quas nulla.</p>
+        </section>
     </main>
 
     <footer id="jsFooter"></footer>
