--- a/contactos.html
+++ b/contactos.html
@@ -13,11 +13,15 @@
 <body class="d-flex flex-column min-vh-100">
     <header id="jsheader"></header>
     <main class="container flex-grow-1 my-4">
-        <h1>hola desde contactos</h1>
+        <div id="jsToastContainer" aria-live="polite" aria-atomic="true"
+            class="toast-container position-fixed top-25 end-0 p-3">
+        </div>
+        <div class="container contactos-div"></div>
     </main>
 
     <footer id="jsFooter"></footer>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/contactos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
